<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/back1"
    android:orientation="vertical"

    tools:context="book.reminder.nandy.bookreminder.MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:src="@drawable/books"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lending_book"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"
        android:onClick="ManualActivity_1"
        android:textSize="@dimen/activity_main_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <Button
                        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Returning_book"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"
            android:onClick="ReturnBook"
            android:textSize="@dimen/activity_main_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_all_books"
            android:onClick="AllBooksList"
        android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"
            android:textSize="@dimen/activity_main_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_id"
            android:id="@+id/changeID"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"
            android:textSize="@dimen/activity_main_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="UpdateID" />

    </RelativeLayout>


<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"/>

</LinearLayout>
