<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginlayout"
    android:background="@drawable/back1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/download">

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top"
        android:layout_marginTop="210dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:text="@string/gmail_id"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_id"
        android:layout_marginTop="300dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:text="@string/pwd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_below="@id/top"
        android:id="@+id/ideditpas"
        android:weightSum="1">

        <EditText
            android:layout_width="264dp"
            android:layout_height="30dp"
            android:background="@drawable/edittext"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:id="@+id/pwd_user"
            android:layout_weight="0.73"
            android:inputType="textPassword" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_below="@+id/idedit">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:onClick="save_id"
        android:text="@string/save"/>



</LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/idedit"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="264dp"
            android:layout_height="30dp"

            android:background="@drawable/edittext"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:id="@+id/email_user"
            android:layout_weight="0.73"
            android:inputType="textEmailAddress" />
    </LinearLayout>
</RelativeLayout>